[package]

name = "fps_counter"
version = "1.0.0"
authors = [
    "bvssvni <bvssvni@gmail.com>",
    "eddyb"
]
keywords = ["fps", "counter", "frames", "tick", "piston"]
description = "A Frames Per Second (FPS) counter"
license = "MIT"
readme = "README.md"
repository = "https://github.com/pistondevelopers/fps_counter.git"
homepage = "https://github.com/pistondevelopers/fps_counter"

[lib]

name = "fps_counter"
path = "src/lib.rs"

